--- a/index.html
+++ b/index.html
@@ -3,183 +3,102 @@
         <title>meesho</title>
         <link href="https://i.ibb.co/dPCQ9zv/meesho.png" rel="icon">
         <link href="home.css" rel="stylesheet">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js">
+        <link href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
         <script src="home.js"></script>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
+
     </head>
     <body>
         <div id="main">
             <header>
+                <div class="use"><img src="user.png" id="user"><b>User</b></div>
                 <div>
-                    <i class="bi bi-person user"></i>
-                    <span id="user">User</span>
-                    <i class="bi bi-suit-heart logo"></i>
-                    <i class="bi bi-cart logo"></i>
-                    <div class="mode" onclick="changemode()">
-                        <img src="moon-stars-fill.svg" alt="moon" id="moon" onclick="changeimage()">
-                    </div>
-                </div>
-                <div id="search">
-                    <select>
-                        <option>search by keywords or Products</option>
+                    <select id="searchbar">
+                        <option>search by keywords</option>
                     </select>
                 </div>
-            </header>
-            <hr>
-            <!--types secton-->
-            <div id="types">
-                <div class="kinds">
-                    <span><img src="https://i.ibb.co/RT5tZR5/shopping-bag.png" alt="shoping bag" class="img3">  All</span>
+                <div class="logo">
+                    <div ><img src="mic.svg" alt="mic" class="large" ></i></div>
+                    <div ><img src="camera.svg" alt="camera" class="large" ></i></div>
                 </div>
-                <div class="kinds">
-                    <span><img src="https://i.ibb.co/W2R3c7P/women.png" alt="women" class="img2">Women</span>
+                <div id="like">
+                    <div onclick="switchmode()"><img src="moon-stars-fill.svg" id="moon" alt="moon"  onClick="switchicon()"class="icon1" ></div>
+                    <div class="icon"><img src="heart.svg"alt="heart" class="icon"></div>
+                    <div class="icon"><img src="bag.svg" alt="bag" class="icon"></div>
                 </div>
-                <div class="kinds">
-                    <span><img src="https://i.ibb.co/gPFv6wt/man.jpg" alt="men" class="img2">Men</span>
-                </div>
-                <div class="kinds">
-                    <span><img src="https://i.ibb.co/myHxMMC/kid.png" alt="kids" class="img2">Kids</span>
-                </div>
-                <div class="kinds">
-                    <span><img src="https://i.ibb.co/Mp63hbM/elecronic.png" alt="electronic" class="img2">Electronics</span>
-                </div>
-                <div class="kinds">
-                    <span><img src="https://i.ibb.co/LQTB38M/kitchen.jpg" alt="home and kitchen" class="img2">Home&kitchen</span>
-                </div>
-            </div>
-            <hr>
-            <!--category section-->
-            <div  class="categories">
-                <div class="cat">
-                    <img src="https://i.ibb.co/Q6bKqFD/category.png" alt="category">
-                    <span class="span">Category</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/8drfk2q/grocery.jpg" alt="superstore">
-                    <span class="span">Superstore</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/QpK5JGC/kurti.jpg" alt="kurti">
-                    <span class="span3">Kurti</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/Y0N3cWN/western.jpg" alt="western">
-                    <span class="span">Western</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/W648GGn/men-fashion.png" alt="men fashion">
-                    <span class="span3">Men</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/p1pYKV7/kidsfashion.jpg" alt="kidfashion">
-                    <span class="span3">Kids</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/s31mKKV/saree.jpg" alt="Saree">
-                    <span class="span3">Saree</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/8DMT3W7/acccesories.jpg" alt="accessories">
-                    <span class="span1">Accessories</span>
-                </div>
-                <div class="cat">
-                    <img src="jwellerry.jpg" alt="jwellery">
-                    <span class="span">Jwellery</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/tqqq3cK/beauty.jpg" alt="beauty">
-                    <span class="span">Beauty</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/x3V2chx/footwear.jpg" alt="footwear">
-                    <span class="span1">Footwear</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/XktvzPF/electronics1.jpg" alt="eectronics">
-                    <span class="span1">Electronics</span>
-                </div>
-                <div class="cat">
-                    <img src="https://i.ibb.co/S56ZpKK/home-decore.jpg" alt="decor">
-                    <span class="span1">Decoration</span>
-                </div>
-                </div>
-            <!--ROCKET offer secction-->
-            <div id="sales">
-                <div id="heading">
-                    MEESHO ROCKET DEALS
-                    <div class="bar"></div>
-                </div>
-                <div class="block">
-                    <div>
-                        <img src="kurti1.jpg" alt="kurti">
-                        <p style="background-color:aqua">min 10% off</p>
-                        <span>kurtas</span>
-                    </div>
-                </div>
-                <div class="block">
-                    <div>
-                        <img src="saree1.jpg" alt="saree">
-                        <p style="background-color:aqua">min 10% off</p>
-                        <span>Saree</span>
-                    </div>
-                </div>
-                <div class="block">
-                    <div>
-                        <img src="westerrn1.jpg" alt="women western">
-                        <p style="background-color:aqua">min 10% off</p>
-                        <span>Women Western</span>
-                    </div>
-                </div>
-                <div class="block">
-                    <div>
-                        <img src="jwellery1.jpg" alt="jwellery">
-                        <p>min 10% off</p>
-                        <span>Jwellery</span>
-                    </div>
-                </div>
-                <div class="block">
-                    <div>
-                        <img src="make up.jpg" alt="makeup">
-                        <p style="background-color:aqua">min 10% off</p>
-                        <span>make up</span>
-                    </div>
-                </div>
-                <div class="block">
-                    <div>
-                        <img src="kidsclothing.webp" alt="kidsclothing">
-                        <p style="background-color:aqua">min 10% off</p>
-                        <span>Kids clothing</span>
-                    </div>
-                </div>
-                <div class="block">
-                    <div>
-                        <img src="shirts and tshirts.webp" alt="shirts">
-                        <p style="background-color:aqua">min 10% off</p>
-                        <span>Shirts & Tshirts</span>
-                    </div>
-                </div>
-                <div class="block">
-                    <div>
-                        <img src="trousers.jpg" alt="trousers">
-                        <p>min 10% off</p>
-                        <span>Trousers</span>
-                    </div>
+        </header>
+        <hr>
+        <div id="tittle">
+            <img src="m.avif" class="mainlogo" alt="m"><P id="messho">MESSHO</P>
+            <p class="sign" onclick="signin()">Sign-in</p>
+            <p class="sign">Subscription</p>
+            <div class="location">
+                <span id="out"></span>
+                <span id="weather"></span>
+                <div  id="weather-icon">
+                    <img src="icons/unknown.png"  alt="icon" class="wicon">
                 </div>
             </div>
-            <hr>
-            <!--offer section-->
-            <div>
-            <div>
-                 <img src="offer1.jpeg" alt="offer" class="offer">
+        </div>
+        <div class="bar"></div>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="offer 1.jpg" class="d-block  offer" alt="...">
             </div>
-            <div>
-                <img src="offer2.jpeg" alt="offer" class="offer">
+            <div class="carousel-item">
+                <img src="offer2.jpg" class="d-block  offer" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="offer3.jpg" class="d-block  offer" alt="...">
             </div>
             </div>
-            <div id="image">
-                 <img src="offer.jpeg" alt="offer" id="image">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+        <div class="bar"></div>
+        <div class="everything">
+            <div class="all">All</div>
+            <div class="all">Women</div>
+            <div class="all">Men</div>
+            <div class="all">Kids</div>
+            <div class="all">Electronics</div>
+            <div class="all">Home & Kitchen</div>
+        </div>
+        <div id="location">
+           <img class="point" src="geo-alt.svg" alt="point"> Add Delivery Location To get Extra Discount >>>> 
+        </div>
+        <div id="category">
+            <div class="category"><img src="category.png" alt="cate" class="category"><a href=""></a><div class="names">Category</div></div>
+            <div class="category"><img src="women.png" class="category"  alt="cate" ><div class="names">Women</div></div>
+            <div class="category"><img src="kiranastore.jpg" class="category"  alt="cate" ><div class="names">Store</div></div>
+            <div class="category"><img src="menfashion.avif" class="category"  alt="cate" ><div class="names1">Men</div></div>
+            <div class="category"><img src="kidsfashion.jpg" class="category"  alt="cate" ><div class="names1">Kids</div></div>
+            <div class="category"><img src="westerndress.jpg" class="category"  alt="cate" ><div class="names2" >Westerndress</div></div>
+            <div class="category"><img src="jwellery.jpg" class="category"  alt="cate" ><div class="names">Jwellery</div></div>
+            <div class="category"><img src="beauty.avif" class="category"  alt="cate" ><div class="names">Beauty</div></div>
+            <div class="category"><img src="lengas.webp" class="category"  alt="cate" ><div class="names">Lengas</div></div>
+            <div class="category"><img src="electronis.webp" class="category"  alt="cate" ><div class="names">Electronics</div></div>
+        </div>
+        <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="offer4.jpg" class="d-block  offer1" alt="...">
             </div>
+            <div class="carousel-item">
+                <img src="offer5.jpg" class="d-block  offer1" alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="offer 6.jpg" class="d-block  offer1" alt="...">
+            </div>
+        </div>
             <!--footer section-->
             <footer>
                 <div>
@@ -232,21 +151,78 @@
                     <img src="Mastercard.png" alt="mastercard" class="credit">
                     <img src="phonepe.png" alt="phonepe" class="credit">
                     <img src="paypal.png" alt="paypal" class="credit">
-                    <img src="discover.png" alt="discover" class="credit">
                     <img src="upi.png" alt="upi" class="credit">
                 </div>
             </footer>
         </div>
+    </div>
         <div id="coupon">
             <button onClick="closecoupon()">&times;</button>
-            <div >
-                <video autoplay loop muted name="media" class="video">
-                    <source src="videoplayback.mp4" type="video/mp4">
-                </video>
-            </div>
+            <img src="paylater.jpg" alt="pay" class="coupon">
         </div>
         <script>
-             window.onload = uploadCoupon()
+            window.onload = uploadCoupon()
+            window.onload = geolocation()
+
+            let x = document.getElementById('out');
+            let y = document.getElementById('weather');
+            let locationicon = document.getElementById('weather-icon')
+
+            function geolocation(){
+                if(navigator.geolocation){
+                    navigator.geolocation.getCurrentPosition(showposition)
+                }
+                else{
+                    x.innerText=`Error`
+                }
+            }
+            function showposition(data){
+                console.log(data)
+                let lat = data.coords.latitude;
+                let lon = data.coords.longitude;
+
+                const url = `https://api.openweathermap.org/data/2.5/forecast/daily?lat=${lat}&lon=${lon}&mode=json&units=metric&cnt=5&appid=fbf712a5a83d7305c3cda4ca8fe7ef29`;
+
+                fetch (url, {method: 'Get'})
+                .then ((res) => res.json())
+                .then ((data) => {
+                    console.log(data)
+                    let mycity = data.city.name
+                    let temp = data.list[0].temp.day + '°C'
+                    let icon = data.list[0].weather[0].icon
+                    x.innerText = `${mycity}`
+                    y.innerText = `${temp}`
+                    locationicon.innerHTML = `<img src="icons/${icon}.png"  >`
+                })
+            }
         </script>
+
+        <div class="container" id="log">
+            <button onclick="logout()">&times;</button>
+            <div class="panel panel-primary">
+                <div class="panel-body">
+                    <div class="form-group" id="fdiv">
+                        <label for="fname" class="control-label">Name</label>
+                        <input name="fname" class="form-control" id="fname" onblur="validatefname()">
+                        <p id="fout"></p>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <div class="form-group" id="fdiv">
+                        <label for="mail" class="control-label">E-mail</label>
+                        <input id="mail" class="form-control" name="email"  oninput="validateemail()">
+                        <p id="eout"></p> 
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <div class="form-group" id="fdiv">
+                        <label for="pwd" class="control-label">Password</label>
+                        <input class="form-control" id="pwd" name="pwd" type="password" minlength="8" oninput="validatepwd()">
+                        <p id="pout"></p> 
+                    </div>
+                </div>
+                <button type="submit">Submit</button>
+            </div>
+        </div>
     </body>
 </html>
