--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                 <div class="panel-body">
                     <div class="form-group" id="fdiv">
                         <label for="pwd" class="control-label">Password</label>
-                        <input class="form-control" id="pwd" name="pwd" type="password" minlength="8" oninput="validatepwd()">
+                        <input class="form-control" id="pwd" name="pwd" type="password" minlength="8" />
                         <p id="pout"></p> 
                     </div>
                 </div>
