--- a/index.html
+++ b/index.html
@@ -87,6 +87,175 @@
             <div class="category"><img src="lengas.webp" class="category"  alt="cate" ><div class="names">Lengas</div></div>
             <div class="category"><img src="electronis.webp" class="category"  alt="cate" ><div class="names">Electronics</div></div>
         </div>
+        <div id="options">
+            <div class="payment">
+                <div class="option"><img src="e-wallet.jpg" alt="wallet" class="paying"><div>Wallet</div></div>
+                <div class="option"><img src="sendmoney.png" alt="sendmoney" class="paying"><div>Send Money</div></div>
+                <div class="option"><img src="paybill1.jpg" alt="paybill" class="paying"><div>Pay Bills</div></div>
+                <div class="option"><img src="scan and pay1.jpg" alt="scanandpay" class="paying"><div>Scan any QR</div></div>
+            </div>
+            <div class="payment">
+                <span id="deals">Deals of the Day</span>
+                <div ><img src="off.png" alt="off" id="off"></div>
+                <div><img src="iron.png" alt="iron" class="deal"></div>
+                <div><img src="travelling bag.webp" alt="travelingbag" class="deal"></div>
+                <div><img src="schoolbag.webp" alt="schoolbag" class="deal"></div>
+                <div><img src="utensils.webp" alt="utensil" class="deal"></div>
+            </div>
+            <div class="payment">
+                <p class="deal1">Electronic deal</p>
+                <div><img src="tv.jpg" alt="tv" class="deal"></div>
+                <div><img src="laptop.jpg" alt="tv" class="deal"></div>
+                <div><img src="refrigirator.avif" alt="tv" class="deal"></div>
+                <div><img src="mobile.jpg" alt="tv" class="deal"></div>
+            </div>
+            <div class="payment">
+                <p class="deal1">Play Games to Win Offers</p>
+                <div><img src="spin.avif" alt="spin"  class="deal"></div>
+                <div><img src="shoot.jpg" alt="spin"  class="deal"></div>
+                <div><img src="jackpot.jpeg" alt="spin"  class="deal"></div>
+            </div>
+        </div>
+        <div class="frequentsell">
+            <p class="deal1">Summer appliances from local stores</p>
+            <div class="frequent">
+                <div class="subfrequent">
+                    <img src="ac.jpg" alt="ac" class="subfrequent">
+                </div>
+                <span>AC</span>
+            </div>
+            <div class="frequent">
+                <div class="subfrequent">
+                    <img src="fan.jpg" alt="fan" class="subfrequent">
+                </div>
+                <span>Fan</span>
+            </div>
+            <div class="frequent">
+                <div class="subfrequent">
+                    <img src="washingmachine.png" alt="machine" class="subfrequent">
+                </div>
+                <span>Washing Machine</span>
+            </div>
+            <div class="frequent">
+                <div class="subfrequent">
+                    <img src="cooler.avif" alt="cooler" class="subfrequent">
+                </div>
+                <span>Cooler</span>
+            </div>
+            <span class="more">See More</span>
+        </div>
+        <div class="frequentsell">
+            <p class="deal1">Under ₹499  | Pocket friendly fashion</p>
+            <div class="frequent">
+                <div class="subfrequent">
+                    <img src="clothes.jpg" alt="clothes" class="subfrequent">
+                </div>
+                <span>Clothing</span>
+            </div>
+            <div class="frequent">
+                <div class="subfrequent">
+                    <img src="backpacks.jpg" alt="backpacks" class="subfrequent">
+                </div>
+                <span>Backpacks</span>
+            </div>
+            <div class="frequent">
+                <div class="subfrequent">
+                    <img src="footwear.jpg" alt="footwear" class="subfrequent">
+                </div>
+                <span>Footwears</span>
+            </div>
+            <div class="frequent">
+                <div class="subfrequent">
+                    <img src="beachwear.jpg" alt="wears" class="subfrequent">
+                </div>
+                <span>       </span>
+            </div>
+            <span class="more">See More</span>
+        </div>
+        <div class="frequentsell">
+            <p class="deal1">Upto 60% 0ff | Tools and home improvements</p>
+            <div class="frequent sell">
+                <div class="subfrequent">
+                    <img src="toolkit.jpg" alt="drilling machine" class="subfrequent">
+                </div>
+                <span>Drilling Machines and More</span>
+            </div>
+            <div class="frequent sell">
+                <div class="subfrequent">
+                    <img src="mops.jpg" alt="mops" class="subfrequent">
+                </div>
+                <span>Spin mops and More</span>
+            </div>
+            <div class="frequent sell">
+                <div class="subfrequent">
+                    <img src="bathroom.jpg" alt="bath accessories" class="subfrequent">
+                </div>
+                <span>Bathroom Accessories</span>
+            </div>
+            <div class="frequent  sell">
+                <div class="subfrequent">
+                    <img src="extension box.webp" alt="wire" class="subfrequent">
+                </div>
+                <span>Extension boards and plugs</span>
+            </div>
+            <span class="more">See More</span>
+        </div>
+            <div class="travel">
+                <p class="deal1">Starting ₹79 | Messho Brands and More </p>
+                <div class="brands">
+                    <div class="subbrand">
+                        <img src="chooper.jpg" alt="chooper" class="subbrand">
+                    </div>
+                    <p>chopper & more</p>
+                </div>
+                <div class="brands">
+                    <div class="subbrand">
+                        <img src="stringlights.jpg" alt="string ligts" class="subbrand">
+                    </div>
+                    <p>String lights & more</p>
+                </div>
+                <div class="brands">
+                    <div class="subbrand">
+                        <img src="jars.jpg" alt="jar" class="subbrand">
+                    </div>
+                    <p>Jar, container & more</p>
+                </div>
+                <div class="brands">
+                    <div class="subbrand">
+                        <img src="wall sticker.jpg" alt="sticker" class="subbrand">
+                    </div>
+                    <p>Wall stickers</p>
+                </div>
+                <span class="seemore">See More</span>
+            </div>
+            <div class="travel">
+                <p class="deal1">Book Travel Ticket</p>
+                <div class="brands">
+                    <div class="subbrand">
+                        <img src="areoplane.jpg" alt="aeroplane" class="subbrand">
+                    </div>
+                    <p>Get upto 10% off on flights ticket</p>
+                </div>
+                <div class="brands">
+                    <div class="subbrand">
+                        <img src="bus.jpg" alt="bus" class="subbrand">
+                    </div>
+                    <p>Guaranteed rewards on bus ticket</p>
+                </div>
+                <div class="brands">
+                    <div class="subbrand">
+                        <img src="train.jpg" alt="train" class="subbrand">
+                    </div>
+                    <p>Zero gateway fees on trains</p>
+                </div>
+                <div class="brands">
+                    <div class="subbrand">
+                        <img src="travelling.jpg" alt="travelling  products" class="subbrand">
+                    </div>
+                    <p>Products need for travel</p>
+                </div>
+                <span class="seemore">See More</span>
+            </div>
         <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
             <div class="carousel-item active">
@@ -97,6 +266,42 @@
             </div>
             <div class="carousel-item">
                 <img src="offer 6.jpg" class="d-block  offer1" alt="...">
+            </div>
+        </div>
+        <div id="womenfashion">
+            <p id="text">Festival wear from small businesses</p>
+            <div class="fashion">
+                <img src="sari.jpg" alt="sari" class="fashion">
+            </div>
+            <div class="fashion">
+                <img src="sari1.jpg" alt="sari" class="fashion">
+            </div>
+            <div class="fashion">
+                <img src="sari2.jpg" alt="sari" class="fashion">
+            </div>
+            <div class="fashion">
+                <img src="sarri3.jpg" alt="sari" class="fashion">
+            </div>
+            <div class="fashion">
+                <img src="sari4.jpg" alt="sari" class="fashion">
+            </div>
+            <div class="fashion">
+                <img src="sari5.jpg" alt="sari" class="fashion">
+            </div>
+            <div class="fashion">
+                <img src="sari6.jpg" alt="sari" class="fashion">
+            </div>
+            <div class="fashion">
+                <img src="sari7.jpg" alt="sari" class="fashion">
+            </div>
+        </div>
+        <div class="container">
+            <div id="seller">
+                <span class="tittle">Register as a Meesho Supplier</span>
+                <p class="subtittle">Sell your products to crores of customers at 0% commission</p>
+                <div class="text"><span class="subtext">100% Profit</span></div>
+                <div class="text"><span class="subtext">Sell All Over INDIA</span></div>
+                <div class="text"><span class="subtext">Grow your Business 10x</span></div>
             </div>
         </div>
             <!--footer section-->
