--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>meesho</title>
         <link href="https://i.ibb.co/dPCQ9zv/meesho.png" rel="icon">
-        <link href="home.css" rel="stylesheet">
+        <link href="home.css" rel="stylesheet" type="text/css">
         <link href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -32,7 +32,7 @@
         <div id="tittle">
             <img src="m.avif" class="mainlogo" alt="m"><P id="messho">MESSHO</P>
             <p class="sign" onclick="signin()">Sign-in</p>
-            <p class="sign">Subscription</p>
+            <a href="listingpages/subscription.html"><p class="sign">Subscription</p></a>
             <div class="location">
                 <span id="out"></span>
                 <span id="weather"></span>
