--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <div class="icon"><img src="heart.svg"alt="heart" class="icon"></div>
                     <div class="icon"><img src="bag.svg" alt="bag" class="icon"></div>
                 </div>
-        </header>
+            </header>
         <hr>
         <div id="tittle">
             <img src="m.avif" class="mainlogo" alt="m"><P id="messho">MESSHO</P>
@@ -81,7 +81,7 @@
             <div class="category"><img src="kiranastore.jpg" class="category"  alt="cate" ><div class="names">Store</div></div>
             <div class="category"><img src="menfashion.avif" class="category"  alt="cate" ><div class="names1">Men</div></div>
             <div class="category"><img src="kidsfashion.jpg" class="category"  alt="cate" ><div class="names1">Kids</div></div>
-            <div class="category"><img src="westerndress.jpg" class="category"  alt="cate" ><div class="names2" >Westerndress</div></div>
+            <div class="category"><img src="health.jpg" class="category"  alt="cate" ><div class="names2" >Health care</div></div>
             <div class="category"><img src="jwellery.jpg" class="category"  alt="cate" ><div class="names">Jwellery</div></div>
             <div class="category"><img src="beauty.avif" class="category"  alt="cate" ><div class="names">Beauty</div></div>
             <div class="category"><img src="lengas.webp" class="category"  alt="cate" ><div class="names">Lengas</div></div>
